--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SLOTIE &#8211; Unique NFT Collection</title>
+    <title>DCB World X BRITTO &#8211; Unique NFT Collection</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -125,7 +125,7 @@
             </div>
             <div class="dutch-det-right">
               <div class="text-block-12">
-                Febuary 10 - 1PM EST<!-- <span id="dateday2"></span> <span id="datehour1"></span> -->
+                Febuary 6 - 9AM EST<!-- <span id="dateday2"></span> <span id="datehour1"></span> -->
               </div>
             </div>
           </div>
